--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ padding-top: 75px;
 padding-bottom:50px;
 }
 
+
+
+#again_btn {
+display: none;
+}
+
+
 #warped {
 position: relative; display: block; width:300px; height:111px; margin: auto;
 }
